--- a/book.bib
+++ b/book.bib
@@ -193,6 +193,7 @@
   number={1},
   pages={21--28},
   year={2013},
+  doi = {10.1016/j.jad.2012.07.001},
   publisher={Elsevier}
 }
 
@@ -204,6 +205,7 @@
   number={3},
   pages={198--208},
   year={2007},
+  doi = { 10.1016/j.sleep.2006.10.006},
   publisher={Elsevier}
 }
 
@@ -263,6 +265,7 @@
   number={3},
   pages={292--313},
   year={2009},
+  doi = {10.1111/j.1751-9004.2009.00170.x]},
   publisher={Wiley Online Library}
 }
 
@@ -629,7 +632,7 @@
 }
 
 @Book{FieldR,
-  title        = {{Discovering Statistics Using R}},
+  title        = {{Discovering Statistics Using {R}}},
   publisher    = {SAGE Publications Ltd},
   year         = {2012},
   author       = {Field, Andy and Miles, Jeremy and Field, Zoe},
@@ -833,7 +836,7 @@ year = {1995}
 
 
 @book{horton2015,
-  title = {Using R and RStudio for data management, statistical analysis, and graphics},
+  title = {Using {R} and {RStudio} for data management, statistical analysis, and graphics},
   author = {Horton, Nicholas J and Kleinman, Ken},
   year = {2015},
   publisher = {Chapman and Hall/CRC}
@@ -1042,12 +1045,13 @@ year = {1995}
 
 @article{Lindert2018,
   title={Bright environmental light ameliorates deficient subjective ‘liking’in insomnia: An experience sampling study},
-  author={te Lindert, Bart HW and Itzhacki, Jacob and {Van der Meijden}, Wisse P and Kringelbach, Morten L and Mendoza, Jorge and {Van Someren}, Eus JW},
+  author={te Lindert, Bart HW and Itzhacki, Jacob and {Van der Meijden}, Wisse P and Kringelbach, Morten L and Mendoza, Jorge and {Van Someren}, EJW},
   journal={Sleep},
   volume={41},
   number={4},
-  pages={zsy022},
+  pages={1-13},
   year={2018},
+  doi = {10.1093/sleep/zsy022},
   publisher={Oxford University Press US}
 }
 
@@ -1101,7 +1105,7 @@ year = {1999}
 
 @article{Meijden2016,
   title={Individual differences in sleep timing relate to melanopsin-based phototransduction in healthy adolescents and young adults},
-  author={{Van der Meijden}, Wisse P and {Van Someren}, Jamie L and {Te Lindert}, Bart HW and Bruijel, Jessica and {Van Oosterhout}, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and {Van Someren}, Eus JW},
+  author={{Van der Meijden}, Wisse P and {Van Someren}, Jamie L and {Te Lindert}, Bart HW and Bruijel, Jessica and {Van Oosterhout}, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and {Van Someren}, EJW},
   journal={Sleep},
   volume={39},
   number={6},
@@ -1293,6 +1297,7 @@ year = {1999}
   number={3},
   pages={217--226},
   year={2018},
+  doi = {10.1016/S2215-0366(18)30053-1},
   publisher={Elsevier}
 }
 
@@ -1782,7 +1787,7 @@ year = {1999}
 
 
 @Article{VanSomeren2000,
-  author = {{Van Someren}, Eus J W},
+  author = {{Van Someren}, EJW},
   journal = {Chronobiology International},
   doi = {10.1081/CBI-100101046},
   isbn = {0742-0528},
@@ -1807,7 +1812,7 @@ booktitle = {Sleep Disorders Part I},
 issn = {0072-9752},
 doi = {https://doi.org/10.1016/B978-0-444-52006-7.00004-6},
 url = {http://www.sciencedirect.com/science/article/pii/B9780444520067000046},
-author = {{Van Someren}, Eus J W},
+author = {{Van Someren}, EJW},
 }
 
 
