--- a/R-package-catalogue.Rmd
+++ b/R-package-catalogue.Rmd
@@ -392,7 +392,7 @@ summary(models_found[[1]]$varest$varresult$depression)
 
 `AutovarCore` is a simplified version of a more extensive package *autovar*
 [@R-autovarCore], which was used in several publications
-[@VanderKrieke2015, @Emerencia2016]. Further information can be found on
+[@VanderKrieke2015; @Emerencia2016]. Further information can be found on
 [http://autovar.nl](https://autovar.nl/) and
 [http://autovarcore.nl](https://autovarcore.nl/)
 
