--- a/mood.Rmd
+++ b/mood.Rmd
@@ -55,7 +55,7 @@ scale center often reflects a neutral response.
 Plotting data from an unidimensional item in a graph is an easy way to visually
 inspect within-subject change in general mood:
 
-```{r fig06a, fig.cap = "34 weeks of mood data, from a single participant"}
+```{r moodplot, fig.cap = "34 weeks of mood data, from a single participant"}
 # Plotting data over time.
 library(ggplot2) 
 library(emaph)
@@ -105,7 +105,7 @@ Combining data from multiple items, such as mood and loneliness, in one graph
 can provide respondents with insight in the interaction between the constructs.
 In R two variables can easily be plotted together:
 
-```{r fig69b, fig.cap = "34 weeks of combined mood data, from a single participant"}
+```{r moodplotcombined, fig.cap = "34 weeks of combined mood data, from a single participant"}
 # Plotting multiple variables in one graph.
 library(ggplot2) 
 library(emaph)
@@ -139,11 +139,9 @@ that all mood states are a linear combination of two independent, bipolar
 scales: valence (ranging from unpleasant to pleasant) and arousal/activation
 (ranging from low to high arousal). Combining scores on these scales places the
 affective states in a circle on one of four quadrants (see Figure
-\@ref(fig:fig06c)). States within one quadrant are believed to be positively
-correlated, while states in the opposing quadrant are thought to be negatively
-correlated.
+\@ref(fig:circumplexrussel)). States within one quadrant are believed to be positively correlated, while states in the opposing quadrant are thought to be negatively correlated.
 
-```{r fig06c, fig.cap = "Russell's Circumplex model of affect.", echo = FALSE, out.width = '60%'}
+```{r circumplexrussel, fig.cap = "Russell's Circumplex model of affect.", echo = FALSE, out.width = '60%'}
 knitr::include_graphics("images/outcomes/Russell1980.png")
 ```
 
@@ -167,9 +165,9 @@ purpose, DeSmet and colleagues developed the pick-a-mood scale, which is a
 pictorial self-report scale [@Desmet2016]. The scale builds on the circumplex
 model and adds the third dimension "dominance" (level of experienced control
 over the mood state), rendering eight (instead of four) different mood states
-and one neutral state (see Figure \@ref(fig:fig09d)).
+and one neutral state (see Figure \@ref(fig:pickamood)).
 
-```{r fig09d, fig.cap = "The Pick-A-Mood Circle.", echo = FALSE, out.width = '50%'}
+```{r pickamood, fig.cap = "The Pick-A-Mood Circle.", echo = FALSE, out.width = '50%'}
 knitr::include_graphics("images/outcomes/Circumplex-Pick-A-Mood.png")
 ```
 
@@ -212,7 +210,7 @@ PA and NA were calculated as the average score across all items and weighted for
 their factor loadings [@Wichers2012]. In r, such a factor analysis can be
 executed as follows:
 
-```{r fig06e, fig.cap = "Factor analysis of scores of 9 EMA items, revealing two factors:  Positive Affect (PA) and Negative Affect (NA)."}
+```{r moodfa, fig.cap = "Factor analysis of scores of 9 EMA items, revealing two factors:  Positive Affect (PA) and Negative Affect (NA)."}
 # Performing a factor analysis.
 library(dplyr)
 library(tibble)
