--- a/EMA.Rmd
+++ b/EMA.Rmd
@@ -64,7 +64,7 @@ grid.arrange(g, b, ncol=2, widths = c(100, 500))
 ```
 
 
-```{r passiveema, echo = FALSE, out.width = '100%', fig.asp = .25, fig.align='center', fig.cap='Passive EMA: data are collected automatically, for instance by a wearable devices such as the wrist-worn GENEActive accelerometer.'}
+```{r passiveema, echo = FALSE, out.width = '100%', fig.asp = .25, fig.align='center', fig.cap='Passive EMA: data are collected automatically, for instance by a wearable device such as the GENEActive accelerometer.'}
 library(jpeg)
 library(grid)
 library(gridExtra)
