--- a/features.Rmd
+++ b/features.Rmd
@@ -92,7 +92,7 @@ variability of EMA scores, such as the standard deviation (SD), have been shown
 to have diagnostic value (see, e.g., @bowen2006). You should not hesitate to
 consider these statistics when they help you to answer your research question.
 
-\index{stationarity}
+\index{Stationarity}
 You should check, though, whether the implicit assumptions behind the statistics
 are correct. When you use the mean and the standard deviation to summarize a
 time-series, you assume that the data-generating process behind the series is
@@ -191,7 +191,7 @@ ggplot(subset(e, week < 20), aes(x = t, y = abs(residuals))) +
 ```
 
 ## Missing Values
-\index{missing values}
+\index{Missing values}
 
 ```{r echo = FALSE, include = FALSE}
 d$t_g <- cut(t, 21, labels = 1:21)
@@ -266,7 +266,7 @@ ggplot(d, aes(x = t, y = s_imputed)) +
 
 
 ## Auto-correlation
-\index{auto-correlation}
+\index{Auto-correlation}
 
 When a series is correlated with delayed copies of itself, we say that it is
 auto-correlated. In repeated measurements of natural phenomena, this
@@ -325,7 +325,7 @@ ggplot(e, aes(x = t, y = rolling_mean)) +
 
 
 ## Periodicity
-\index{circadian rhythms}
+\index{Circadian rhythms}
 
 Both the auto-correlation analysis and the moving average plot suggest
 periodicity in the EMA time series. Suppose we want to know more about this
