--- a/packages.bib
+++ b/packages.bib
@@ -1,12 +1,12 @@
 @Manual{R-autovar,
-    title = {autovar: Automated Vector Autoregression Model Creation},
+    title = {autovar: {A}utomated Vector Autoregression Model Creation},
     author = {Emerencia, Ando C.},
     year = {2018},
     note = {R package version 0.2-4},
 }
 
 @Manual{R-autovarCore,
-    title = {autovarCore: Automated Vector Autoregression Models and Networks},
+    title = {autovarCore: {A}utomated Vector Autoregression Models and Networks},
     author = {Emerencia, Ando C.},
     year = {2018},
     note = {R package version 1.0-4},
@@ -15,7 +15,7 @@
 
 
 @Manual{R-base,
-  title = {R: A Language and Environment for Statistical Computing},
+  title = {R: {A} Language and Environment for Statistical Computing},
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
@@ -24,7 +24,7 @@
 }
 
 @Manual{R-bookdown,
-    title = {bookdown: Authoring Books and Technical Documents with R
+    title = {bookdown: {A}uthoring Books and Technical Documents with {R}
       Markdown},
     author = {Yihui Xie},
     year = {2018},
@@ -33,7 +33,7 @@
 }
 
 @Book{R-bookdown_book,
-    title = {bookdown: Authoring Books and Technical Documents with {R}
+    title = {bookdown: {A}uthoring Books and Technical Documents with {R}
       Markdown},
     author = {Yihui Xie},
     publisher = {Chapman and Hall/CRC},
@@ -44,7 +44,7 @@
 }
 
 @Manual{R-dplyr,
-  title = {dplyr: A Grammar of Data Manipulation},
+  title = {dplyr: {A} Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2018},
   note = {R package version 0.7.6},
@@ -52,7 +52,7 @@
 }
 
 @Manual{R_GENEAread,
-    title = {GENEAread: Read GENEA Binary Files},
+    title = {GENEAread: {R}ead {GENEA} Binary Files},
     author = {Zhou Fang and Joss Langford and Charles Sweetland},
     year = {2018},
     note = {R package version 2.0.2},
@@ -60,7 +60,7 @@
 }
 
 @Manual{R-GGIR,
-  title = {{GGIR}: Raw Accelerometer Data Analysis},
+  title = {{GGIR}: {R}aw Accelerometer Data Analysis},
   author = {Vincent T. {Van Hees} and Zhou Fang and Jing Hua Zhao and Joe Heywood and Evgeny Mirkes and Severine Sabia and Jairo H Migueles},
   year = {2018},
   note = {R package version 1.5-24},
@@ -69,7 +69,7 @@
 }
 
 @Manual{R-graphicalVAR,
-  title = {graphicalVAR: Graphical VAR for Experience Sampling Data},
+  title = {graphical{V}AR: {G}raphical {V}AR for Experience Sampling Data},
   author = {Sacha Epskamp},
   year = {2017},
   note = {R package version 0.2.1},
@@ -77,7 +77,7 @@
 }
 
 @Manual{R-haven,
-    title = {haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files},
+    title = {haven: {I}mport and Export {'SPSS', 'Stata' and 'SAS'} Files},
     author = {Hadley Wickham and Evan Miller},
     year = {2018},
     note = {R package version 1.1.2},
@@ -85,7 +85,7 @@
 }
 
 @Manual{R-knitr,
-  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  title = {knitr: {A} General-Purpose Package for Dynamic Report Generation in {R}},
   author = {Yihui Xie},
   year = {2017},
   note = {R package version 1.17},
@@ -105,7 +105,7 @@
 }
 
 @Manual{R-nlme,
-  title = {{nlme}: Linear and Nonlinear Mixed Effects Models},
+  title = {{nlme}: {L}inear and Nonlinear Mixed Effects Models},
   author = {Jose Pinheiro and Douglas Bates and Saikat DebRoy and Deepayan Sarkar and {R Core Team}},
   year = {2018},
   note = {R package version 3.1-137},
@@ -113,7 +113,7 @@
 }
 
 @Manual{R-PhysicalActivity,
-    title = {PhysicalActivity: Process Accelerometer Data for Physical Activity Measurement},
+    title = {PhysicalActivity: {P}rocess Accelerometer Data for Physical Activity Measurement},
     author = {Leena Choi and Cole Beck and Zhouwen Liu and Charles E. Matthews and Maciej S. Buchowski},
     year = {2018},
     note = {R package version 0.2-2},
@@ -121,7 +121,7 @@
 }
 
 @Manual{R-powerlmm,
-    title = {powerlmm: Power Analysis for Longitudinal Multilevel Models},
+    title = {powerlmm: {P}ower Analysis for Longitudinal Multilevel Models},
     author = {Kristoffer Magnusson},
     year = {2018},
     note = {R package version 0.3.0},
@@ -129,7 +129,7 @@
 }
 
 @Manual{R-simstudy,
-  title = {simstudy: Simulation of Study Data},
+  title = {simstudy: {S}imulation of Study Data},
   author = {Keith Goldfeld},
   year = {2018},
   note = {R package version 0.1.9},
@@ -137,7 +137,7 @@
 }
 
 @Manual{R-rmarkdown,
-  title = {rmarkdown: Dynamic Documents for R},
+  title = {rmarkdown: {D}ynamic Documents for {R}},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
   year = {2017},
   note = {R package version 1.8},
