--- a/instruments_catalogue.Rmd
+++ b/instruments_catalogue.Rmd
@@ -200,6 +200,7 @@ knitr::include_graphics(c(
 
 ### GENEActiv
 \index{GENEActiv}
+\index{Actant - Activity Analysis Toolbox}
 
 GENEActiv, sold by UK-based company Activinsights (<http://activinsights.com>),
 is a waterproof wrist-worn device with a high-precision, configurable 3-axial
@@ -228,6 +229,8 @@ knitr::include_graphics("images/instruments/geneactive/geneactive-pack.png")
 
 ### VU-AMS
 \index{VU-AMS}
+\index{DAMS}
+\index{Autonomic and cardiovascular activity}
 
 The VU University Ambulatory Monitoring System (VU-AMS;
 <http://www.vu-ams.nl/>), developed by the department of Biological Psychology
