--- a/aph-catalogue.Rmd
+++ b/aph-catalogue.Rmd
@@ -88,7 +88,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 |:-----------------|:-------------------------------------------------------------|
 | **Project team** | Femke Lamers, PhD; Brenda Penninx, PhD; Sonia Difrancesco, MSc, and the RADAR consortium.  |
 | **APH site** | VUmc, GGZ inGeest |
-| **Project** | The European (EU H2020-IMI) RADAR-CNS project (Remote Assessment of Disease and Relapse - Central Nervous System; http://www.radar-cns.org/) aims to study the potential of wearable devices and smartphone technology to help prevent and treat depression, multiple sclerosis and epilepsy. The project, which started in 2016, was designed to examine how remote measurement technologies can monitor and improve quality of life and psychological well-being of patients. Within this project, the VUmc/GGZ inGeest research site focuses on depression (RADAR-MDD), in collaboration with King's College, London (KCL). |
+| **Project** | The European (EU H2020-IMI) *RADAR-CNS* project (Remote Assessment of Disease and Relapse - Central Nervous System; http://www.radar-cns.org/) aims to study the potential of wearable devices and smartphone technology to help prevent and treat depression, multiple sclerosis and epilepsy. The project, which started in 2016, was designed to examine how remote measurement technologies can monitor and improve quality of life and psychological well-being of patients. Within this project, the VUmc/GGZ inGeest research site focuses on depression (RADAR-MDD), in collaboration with King's College, London (KCL). |
 | |  Technical goals of the project are to 1) build an end-to-end open source system with generalized data aggregation capabilities, and 2) explore (technological aspects of) big data solutions. Clinical goals of the project are to 1) assess the feasibility of continuous monitoring of patients, and 2) predict disease onset or relapse with big data prevention and risk assessment approaches. |
 | **EMA Measures** | Data are collected during a 2-year period, in which EMA will be activated every 6 weeks for 6 consecutive days. Active EMA outcomes include (variability in) sleep quality, levels of activity, social interactions, mood, cognitive performance and stress as possible predictors of the clinical course of participants. Passive EMA measures include location and movement (GPS; actigraphy), skin temperature, galvanic skin conductance, heart rate (-variability), voice recognition, social interaction data (call/message logs), and smartphone app usage patterns.|
 | **Platform(s)**  | In the RADAR project, an comprehensive EMA platform is developed (the RADAR RMT application; see http://thehyve.nl/cases/radar-cns and http://github.com/RADAR-base); This platform focuses on classes of data rather than specific devices, to enhance modularity and adaptability, as new devices become available. The platform will be used to integrate and control data streams from an EMA smartphone app and several wearable device (including the [Empatica E4 Wristband](http://www.empatica.com/research/e4/), Pebble 2 Smart-watch, Biovotion VSM, Faros 180, and [Fitbit](http://www.fitbit.com/home). |
@@ -111,7 +111,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **APH site**  | Vrije Universiteit Amsterdam; GGZ inGeest (and other organisations)|
 | **Project(s)**    | Moodbuster was developed in the European FP7 project “ICT4Depression” (@warmerdam2012; http://www.ict4depression.eu/), and applied in the Horizon 2020 FP7 EU-project E-COMPARED [European COMPARative Effectiveness research on blended Depression treatment versus treatment-as-usual; @Kleiboer2016; @kemmeren2016; <http://www.e-compared.eu/>], Moodbuster will also be used in the EU ImpleMentAll project (http://www.implementall.eu) and in several other clinical trials that are currently (October 2018) in preparation. |
 | **EMA measures**  | In the ICT4Depression project, the Moodbuster platform included a complex set of active and passive EMA measures, including physiological sensors, accelerometers, wearables to measure sympathetic nervous system responses (chest strap and glove), and an Android EMA smartphone app. |
-|                   | For the E-COMPARED study, the Moodbuster website and smartphone app were adapted to deliver (blended) treatment to patients with MDD, in 5 routine practice settings across Europe. A therapist portal was added, in order to allow therapists to monitor patients’ progress and send feedback messages. Smartphone-based EMA was used to asses sleep, mood, worrying, self-esteem, activities (2 items) and social contacts. Prompts were sent at a random time point between 10:00 and 22:00. At the beginning and during the final phase of treatment, patients received two additional prompts per day for one week. In the morning (around 10:00), sleep, worrying and self-esteem items were assessed. In the evening (around 22:00), these questions were repeated, along with the activity and social interaction items. Patients rated these EMA items on a visual analogue scale, ranging from 0 (low) to 10 (high). EMA data were used in several machine learning projects [@mikus2018; @rocha2018; @VanBreda2018; @VandeVen2017]. |
+|                   | For the E-COMPARED study, the Moodbuster website and the smartphone app were adapted to deliver (blended) treatment to patients with MDD, in 5 routine practice settings across Europe. A therapist portal was added, in order to allow therapists to monitor patients’ progress and send feedback messages. Smartphone-based EMA was used to asses sleep, mood, worrying, self-esteem, activities (2 items) and social contacts. Prompts were sent at a random time point between 10:00 and 22:00. At the beginning and during the final phase of treatment, patients received two additional prompts per day for one week. In the morning (around 10:00), sleep, worrying and self-esteem items were assessed. In the evening (around 22:00), these questions were repeated, along with the activity and social interaction items. Patients rated these EMA items on a visual analogue scale, ranging from 0 (low) to 10 (high). EMA data were used in several machine learning projects [@mikus2018; @rocha2018; @VanBreda2018; @VandeVen2017]. |
 | **Platform used** | Moodbuster (http://www.moodbuster.eu; see also Chapter \@ref(ema-instruments-catalogue))). |
 | **Contact**       | http://research.vu.nl/en/persons/heleen-riper | 
 |                   | http://research.vumc.nl/en/persons/jan-smit |
@@ -130,7 +130,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 |:---------------|:-------------------------------------------------------------|
 | **Project team** | Margreet Worm-Smeitink, MSc; Hans Knoop, PhD, in collaboration with Judith Rosmalen, PhD, Anne van Gils, MSc, Rei Monden, PhD, and others |
 | **APH site** | AMC |
-| **Project** | The CFS EMA study was designed to investigate - through time-series analyses - whether there are differences in perpetuators of fatigue between individual patients. |
+| **Project** | The *CFS EMA study* was designed to investigate - through time-series analyses - whether there are differences in perpetuators of fatigue between individual patients. |
 | **EMA measures | New patients attending the ECCF (n = 102) were asked to complete an e-diary, 5 times a day, for 2 weeks. The times were fixed in consultation with the participant, with a 3-hour break between each assessment. The e-diary assessed fatigue, pain, anxiety, depression, activity (physical, mental, social), patients' focus on fatigue, fatigue catastrophizing, self-efficacy, fear avoidance, and social incomprehension. Participants also wore an accelerometer (actigraphy) during the period when the self-reports were collected. The R 'auto-var' package was used to conduct network analyses. Results are forthcoming. Identified determinants of fatigue will used to personalize treatment of CFS-patients. |
 | **Platform used** | RoQua (http://www.roqua.nl; see Chapter \@ref(ema-instruments-catalogue))). Participants received a link to the (web-based) e-diary via an SMS to their personal smartphone. |  
 | **Contact** | http://www.amc.nl/web/research-75/publications/prof.-dr.-j.a.-knoop.htm |
@@ -151,7 +151,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 |:-----------------|:-------------------------------------------------------------|
 | **Project team** | Mirjam Sprangers, PhD, in collaboration with Martijn Spruit, PhD (PI); Yvonne Goërtz, MSc; Zjala Ebadi (from July 2018), MSc, Melissa Thong, PhD, Daisy Janssen, MD, PhD, Jeanette Peters, PhD, Jan Vercoulen, PhD, Chris Burtin, MSc, Yvonne Meertens-Kerris, Arnold Coors, Jean Muris, MD, PhD, Emiel Wouters, MD, PhD, Judith Prins, PhD, and Martijn Spruit, PhD |
 | **APH site**| AMC (in collaboration with Ciro-Horn, Maastricht UMC, Radboud UMC, and Hasselt University) |
-| **Project goals**| The FAntasTIGUE study examines fatigue in patients with chronic obstructive pulmonary disease (COPD; n = 400), by evaluating the course of fatigue, precipitating/perpetuating factors and hospitalization. A secondary aim is to identify diurnal fluctuations in fatigue, by using EMA in a sub-sample of participants (n = 40) [@Goertz2018].|
+| **Project goals**| The *FAntasTIGUE* study examines fatigue in patients with chronic obstructive pulmonary disease (COPD; n = 400), by evaluating the course of fatigue, precipitating/perpetuating factors and hospitalization. A secondary aim is to identify diurnal fluctuations in fatigue, by using EMA in a sub-sample of participants (n = 40) [@Goertz2018].|
 | **EMA measures** | The project comprises four data collection periods (baseline, and 4, 8, and 12-month follow-up). During data collection periods, patients are provided with iPods, on which an EMA application will be pre-installed. Participants will be prompted 8 times a day, at random moments between 7:30 and 22:30, for 5 consecutive days, to answer 19 items (including nine contextual items). Measured concepts include fatigue, relaxed feeling, breathlessness, agitation, uncertainty, irritation, satisfaction, anxiety, feeling energetic, and feeling mentally fit. Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. In addition, participants are asked to complete a morning questionnaire soon after they awaken to assess the quality of their sleep the previous night. Participants also complete an evening questionnaire, assessing the general perception of their day just before going to bed. During the EMA data collection period, patients will also be asked to wear an actigraph (activity monitor), 24 hours a day, for one week. |
 | **Platform used**| Psymate (http://psymate.eu; see Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact**      | http://www.amc.nl/web/research-75/publications/prof.-dr.-m.a.g.-sprangers-publications.htm |
@@ -164,7 +164,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 |:------------------|:-------------------------------------------------------------|
 | **Project team**  | Mirjam Sprangers, PhD, with Iris Hartog, MSc; Justine Netjes (until 2017), MSc; Tom Oreel, MSc; Pythia Nieuwkerk, PhD; Michael Scherer-Rath, PhD; José Henriques, MD, PhD; Hanneke van Laarhoven, MD, PhD  |
 | **APH site**  | AMC |
-| **Project**       | The IMPACT project (http://www.impactonderzoek.nl/) is an NWO-funded study targeting the Quality of Life (QoL) of patients with multiple chronic morbidities, specifically those undergoing a cardiac intervention. The project aims to improve the conceptualization of QoL and enhance the sensitivity and comprehensiveness of its measurement by taking the trait-state distinction, contextual factors, and response shift into account). Participants are cardiac patients with comorbidities who were scheduled for elective percutaneous coronary intervention (PCI) or elective coronary artery bypass graft (CABG) (N = 320). In a sub-sample of participants, QoL is monitored through EMA (n = 37), to monitor QoL states. The study has a longitudinal design, with three EMA data collection periods: 1) pre-treatment, 2) two weeks after treatment for PCI patients or 3 months post-treatment for CABG patients, and 3) six months post-treatment. |
+| **Project**       | The *IMPACT* project (<http://www.impactonderzoek.nl/>) is an NWO-funded study targeting the Quality of Life (QoL) of patients with multiple chronic morbidities, specifically those undergoing a cardiac intervention. The project aims to improve the conceptualization of QoL and enhance the sensitivity and comprehensiveness of its measurement by taking the trait-state distinction, contextual factors, and response shift into account). Participants are cardiac patients with comorbidities who were scheduled for elective percutaneous coronary intervention (PCI) or elective coronary artery bypass graft (CABG) (N = 320). In a sub-sample of participants, QoL is monitored through EMA (n = 37), to monitor QoL states. The study has a longitudinal design, with three EMA data collection periods: 1) pre-treatment, 2) two weeks after treatment for PCI patients or 3 months post-treatment for CABG patients, and 3) six months post-treatment. |
 | **EMA measures**  | Participants are prompted to answer nine general and one evening questionnaire per day, for seven consecutive days. During the day, patients are beeped randomly between 7:30 and 22:30 to complete a 19-item questionnaire. Concepts measured include: positive mood (feeling energetic, relaxed feeling, cheerfulness, happy), negative mood (anxiety, sadness, irritation, worry), coronary artery disease symptoms (chest pain, tightness in chest, oppressive feeling on the chest), and general symptoms (tiredness, other types of pain, shortness of breath), and contextual items. Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. Patients are also asked to complete an evening questionnaire just before they go to bed. The evening questionnaire has, besides the general questionnaire, an additional set of questions from the EQ-5D, and a question on the overall health state of the day. This item is rated on a visual analogue scale from 0 (worst) to 100 (best). Data will be analyzed with vector auto-regressive models, using R. |
 | **Platform used** | PsyMate (http://psymate.eu; see Chapter \@ref(ema-instruments-catalogue))); Participants are provided with iPods with a pre-installed EMA application, or, if they prefer, can use their own device. |
 | **Contact**       | http://www.amc.nl/web/research-75/publications/prof.-dr.-m.a.g.-sprangers-publications.htm |
@@ -200,7 +200,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Project team** | Wouter van Ballegooijen, PhD; Chani Nuij, MSc.; Ad Kerkhof, PhD; Jan Smit, PhD; Heleen Riper, PhD, and others |
 | **APH site** | VU, VUmc, GGZ inGeest |
 | **Project**      |  The 'Continuous Assessment for Suicide Prevention And Research' (CASPAR) study ([@Nuij2018) aims to evaluate the feasibility of mobile safety planning and daily mobile self-monitoring in routine care treatment for patients with major depression or dysthymia and suicide risk in mental health care. Feasibility will be operationalized in terms of uptake, usage, acceptability, usability and patient satisfaction. EMA data will be used to: (a) empirically validate hypothesized psychological processes and stages of suicide pathways, (b) identify individual pathways to suicidal behavior, and (c) profile (sub)types of suicidality. The project is expected to result in 1) an interactive smartphone-based safety plan that patients can access 24/7, 2) increased disease awareness of patients due to self-monitoring, and 3) input for the national and international field of mental health care by sharing our results and our data, ultimately contributing to more personalized interventions according to precision medicine principles, and more effective suicide prevention. |
-| **EMA measures** | In the project, adult suicidal patients (N = 80) with major depression or dysthymia and suicide risk in mental health care will be prompted, three times a day, to answer eight self-report items (e.g. 'I feel sad') assessing mood, rumination, hopelessness, defeat, entrapment, burdensomeness, belongingness, impulsiveness, suicidal imagery and suicidal ideation. Items, which are based on existing questionnaires, such as the Patient Health Questionnaire (PHQ-9), are rated on a 7-point Likert-scale, ranging from 'Not at all' to 'Very much'. Results are presented to patients in graphs, which patients encouraged to discuss with their clinicians. In addition to active EMA data, location data are also gathered to assess movement patterns and daily rhythms. Planned variables also include accelerometer data and smartphone usage patterns. These data are not visible to study participants. |
+| **EMA measures** | In the project, adult suicidal patients (N = 80) with major depression or dysthymia and suicide risk in mental health care will be prompted, three times a day, to answer eight self-report items (e.g. *'I feel sad'*) assessing mood, rumination, hopelessness, defeat, entrapment, burdensomeness, belongingness, impulsiveness, suicidal imagery and suicidal ideation. Items, which are based on existing questionnaires, such as the Patient Health Questionnaire (PHQ-9), are rated on a 7-point Likert-scale, ranging from 'Not at all' to 'Very much'. Results are presented to patients in graphs, which patients encouraged to discuss with their clinicians. In addition to active EMA data, location data are also gathered to assess movement patterns and daily rhythms. Planned variables also include accelerometer data and smartphone usage patterns. These data are not visible to study participants. |
 | **Platform used**| Ilumivu (http://ilumivu.com, see Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact**      | http://research.vu.nl/en/persons/wouter-van-ballegooijen |
 |                  | http://research.vu.nl/en/persons/chani-nuij |
@@ -222,7 +222,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Team** | Mark van der Gaag, PhD, Alyssa Jongeneel, MSc, David van den Berg, PhD, Dorien Scheffers, MSc |
 | **APH site** | Vrije Universiteit Amsterdam, Parnassia Psychiatric Institute
 | **Project** | The TemStem project focusses on people who suffer from hearing voices and are obstructed by them in their daily life. Study participants install an app that contains both an EMI and EMA function, which is designed to reduce distress and dysfunction caused by auditory verbal hallucinations [@jongeneel2018]. Components of the app include 1) coping: addressing verbal working memory phonological loop with a language task, thereby blocking the hearing of voices, 2) positive reinforcement: decreasing self-reported negative self-esteem themes, 3) treatment: reducing emotional response to memories associated with voices by taxing the auditory working memory during recall of negative auditory memories (as in EMDR therapy). The TemStem study aims to explore the effect of the app on distress and dysfunction in an RCT, specifically with regard to the effect of TemStem on frequency and severity of AVH. Additional analyses will focus on the identification of working mechanisms (predictors and mediators of effects), and the usability of TemStem.|
-| **EMA measures** | TemStem users are encouraged to fill-in nine self-report items on a daily basis. Items tap: 1) hearing voices: 6 items (e.g. "Today, the voices were disturbing"), 2) mood, 3) self-esteem, 4) the use of TemStem ("I used TemStem today"). Items, which are rated on a 7-point Likert-scale, are based on existing EMA questionnaires. Results are presented to users in separate graphs, to support users in gaining insight in the pattern of AVH over time, or after use of Temstem. Stored variables include scores of vividness of AVH pre and post use of TemStem, data on application use (duration), used function (e.g. 'Silencing' function which focuses on coping, or 'Challenging' function which is based on dual tasking), and how users feel when they hear voices. Users can choose to provide additional information on age, gender, which county in the Netherlands they are currently located, how they found the app, and why they want to use it |
+| **EMA measures** | TemStem users are encouraged to fill-in nine self-report items on a daily basis. Items tap: 1) hearing voices: 6 items (e.g. *"Today, the voices were disturbing"*), 2) mood, 3) self-esteem, 4) the use of TemStem (*"I used TemStem today"*). Items, which are rated on a 7-point Likert-scale, are based on existing EMA questionnaires. Results are presented to users in separate graphs, to support users in gaining insight in the pattern of AVH over time, or after use of Temstem. Stored variables include scores of vividness of AVH pre and post use of TemStem, data on application use (duration), used function (e.g. 'Silencing' function which focuses on coping, or 'Challenging' function which is based on dual tasking), and how users feel when they hear voices. Users can choose to provide additional information on age, gender, which county in the Netherlands they are currently located, how they found the app, and why they want to use it |
 | **Platform used** | The TemStem app was developed by Reframing Studio, in collaboration with Parnassia Psychiatric Institute and TU Delft. The app is available for IOS and Android. |
 | **Contact** | http://research.vu.nl/en/persons/m-van-der-gaag |
 |             | http://research.vu.nl/en/persons/alyssa-jongeneel |
@@ -238,7 +238,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Team**         | Mark van der Gaag, PhD, Roos Pot-Kolder, MSc, with others
 | **APH site** | Vrije Universiteit Amsterdam, VUmc, (in collaboration with UMC Groningen, Maastricht University) |
 | **Project**      | In the context of a trail exploring the effect of virtual reality exposure therapy on social participation in people with a psychotic disorder [VRETp; n = 116, @pot2016], EMA data were collected to assess changes in social functioning and paranoid ideation.
-| **EMA measures** | EMA included momentary assessment of 1) Anxiety (one item, e.g. "I feel anxious"), 2) Perceived social threat (four items, e.g. "In this company, I feel accepted"), 3) Paranoia (three items, e.g. "I feel suspicious"), and 4) Time spent with others (max. three multiple choice items inquiring about type of company (nobody, family, non-family, etc.). These items were based on previous EMA work [e.g., @collip2011social). Participants were prompted 10 times a day, during 6 days. Anxiety, threat and paranoia items were rated on a 7-point Likert scale, ranging from 1 ("not at all") to 7 ("very"). Reports had to be completed within 15 min of the beep. To be included in the analysis, participants had to complete diary entries for at least one-third of the beeps (i.e., a minimum of 20 measurements). All 116 participants completed EMA measurements at baseline (mean number of completed self-assessments 46.1, SD 13.3), 96 participants completed the post-treatment assessment sufficiently (43.1, SD 10.1), and 87 participants completed the follow-up (43.2, SD 11.1). The trial results suggest that the addition of VR-CBT to standard treatment can reduce paranoid ideation and momentary anxiety in patients with a psychotic disorder [@pot2018].|
+| **EMA measures** | EMA included momentary assessment of 1) Anxiety (one item, e.g. *"I feel anxious"*), 2) Perceived social threat (four items, e.g. *"In this company, I feel accepted"*), 3) Paranoia (three items, e.g. *"I feel suspicious"*), and 4) Time spent with others (max. three multiple choice items inquiring about type of company (nobody, family, non-family, etc.). These items were based on previous EMA work [e.g., @collip2011social). Participants were prompted 10 times a day, during 6 days. Anxiety, threat and paranoia items were rated on a 7-point Likert scale, ranging from 1 ("not at all") to 7 ("very"). Reports had to be completed within 15 min of the beep. To be included in the analysis, participants had to complete diary entries for at least one-third of the beeps (i.e., a minimum of 20 measurements). All 116 participants completed EMA measurements at baseline (mean number of completed self-assessments 46.1, SD 13.3), 96 participants completed the post-treatment assessment sufficiently (43.1, SD 10.1), and 87 participants completed the follow-up (43.2, SD 11.1). The trial results suggest that the addition of VR-CBT to standard treatment can reduce paranoid ideation and momentary anxiety in patients with a psychotic disorder [@pot2018].|
 | **Platform used** | PsyMate (http://www.psymate.eu/, see Chapter \@ref(ema-instruments-catalogue)). Because the PsyMate application was not finished at the time of the trial, participants were provided with a small palmtop device for the duration of the study.|
 | **Contact**       | http://research.vu.nl/en/persons/m-van-der-gaag |
 |                   | https://www.researchgate.net/profile/Roos_Pot-Kolder |
