--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Ecological Momentary Assessment in Mental Health Research"
-subtitle: "A Practical Introduction, With Examples in R (1st edition)"
+subtitle: "A Practical Introduction, with Examples in R (1st edition)"
 author: ["Jeroen Ruwaard", "Lisa Kooistra", "Melissa Thong"]
 date: "`r Sys.Date()`"
 cover-image: "images/cover/smallcover.jpg"
